--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,10 +66,11 @@
   }
 }
 
-html,
 body {
-  width: 100%;
-  height: 100%;
+  -webkit-font-smoothing: antialiased;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  min-height: 100%;
 }
 
 body {
